--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Hackathon</string>
+    <string name="edit">Edit</string>
+    <string name="save">Save</string>
+    <string name="Profile">Profile</string>
 </resources>
