--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="notif">NOTIFICATIONS SETTINGS</string>
     <string name="privacy">PRIVACY POLICY</string>
 
+    <string name="rewards">REWARDS</string>
+
     <string name="contact">Contact Us</string>
 
     <string name="allow">ALLOW NOTIFICATIONS</string>
